[package]
name = "tpx"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Local CLI proxy for Claude Code: turn write-capable API keys into effectively read-only ones via a deny-closed YAML allowlist."
authors = ["Tenzin Wangdhen <sinzin91@gmail.com>"]
license = "MIT"

[[bin]]
name = "tpx"
path = "src/main.rs"

[lib]
name = "tpx"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util", "time"] }
url = "2"
percent-encoding = "2"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
pretty_assertions = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
